# TerminalPlot

./: .clangd  CMakeLists.txt  README.md
include/: plot.h  terminal_screen.h
src/: main.cpp  plot.cpp
src/plot/: plot.cpp  terminal_screen.cpp
